--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,15 @@ services:
       MSSQL_SA_PASSWORD: "Password@1"
     ports:
       - "1433:1433"
+    volumes:
+      - sql-data:/var/opt/mssql 
+  redis:
+    image: redis:latest   # Pulls the latest Redis image from Docker Hub
+    ports:
+      - "6379:6379"       # Maps Redis default port from container to the host
+    volumes:
+      - redis-data:/data
+
+volumes:
+  redis-data:
+  sql-data:
