--- a/client/angular.json
+++ b/client/angular.json
@@ -56,7 +56,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -66,7 +72,8 @@
           "options": {
             "ssl": true,
             "sslCert": "ssl/localhost.pem",
-            "sslKey": "ssl/localhost-key.pem"
+            "sslKey": "ssl/localhost-key.pem",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
